--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>My To-do list</title>
     
     <!-- Link to the external CSS file for styling -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!-- Main heading of the page -->
@@ -34,6 +34,6 @@
     </footer>
     
     <!-- Link to the external JavaScript file -->
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
